--- a/package.json
+++ b/package.json
@@ -22,11 +22,15 @@
     "@keystonejs/app-graphql": "^5.1.5",
     "@keystonejs/app-static": "^5.1.2",
     "@keystonejs/auth-password": "^5.1.5",
+    "@keystonejs/field-content": "^5.4.8",
     "@keystonejs/fields": "^9.0.0",
     "@keystonejs/fields-authed-relationship": "^1.0.3",
     "@keystonejs/file-adapters": "^6.0.1",
     "@keystonejs/keystone": "^8.0.0",
     "connect-mongo": "^3.2.0",
     "cross-env": "^7.0.0"
+  },
+  "devDependencies": {
+    "faker": "^4.1.0"
   }
 }
